# added-value

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: actions.yml
added_value/: __init__.py  all_items_role.py  all_items_str_role.py  any_items_role.py  any_items_str_role.py  format_role.py  items_table_directive.py  multisort.py  non_string_iterable.py  projected_table_directive.py  pyobj_role.py  repr_role.py  shape.py  sorted_frozen_set.py  sphinxext.py  str_role.py  tabulator.py  toposet.py  util.py  version.py
docs/: Makefile  make.bat
docs/code/: cal.py  countries.py  economy.py  elements.py  materials.py  opcodes.py  pages.py  steel.py
docs/source/: conf.py  index.rst  literals.rst  series_of_items.rst  single_items.rst  (+3 more)
test/: conftest.py  example_source.py  test_all_items_role.py  test_all_items_str_role.py  test_any_items_role.py  test_any_items_str_role.py  test_format_role.py  test_items_table_directive.py  test_multisorted.py  test_repr_role.py  test_str_role.py  test_tabulator.py  test_toposet.py
tests/: .coveragerc  conftest.py  test-requirements.txt  test_all_items_role.py  test_any_items_role.py  test_deep_attribute.py  test_format_role.py  test_items_table_directive.py  test_literal_all_items_role.py  test_literal_any_items_role.py  test_literal_block_directive.py  test_literal_repr_role.py  test_literal_str_role.py  test_parse_call.py  test_repr_role.py  test_resolve_attr.py  test_str_role.py  test_str_role_with_callable.py  test_str_role_with_callable_and_args.py
(+70 files in other folders)
