[bumpversion]
current_version = 0.22.1
tag = True
tag_name = release/v{new_version}
commit = True

[metadata]
name = added-value
version = attr: added_value.version.__version__
description = Sphinx extension for embedding values extracted from Python modules
long_description = file: README.rst, LICENSE.txt
long_description_content_type = text/x-rst
url = https://github.com/sixty-north/added-value
author = Sixty North AS
author_email = systems+added-value@sixty-north.com
keywords = sphinx documentation
license = BSD 3-clause
classifiers = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Topic :: Documentation
	Topic :: Utilities
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = False
package_dir = 
	=source
packages = find:
install_requires = 
	docutils
	les_iterables>=0.6.0
	natsort
	six
	sphinx

[options.extras_require]
dev = bumpversion ; build ; twine ; wheel
doc = sphinx ; sphinx_rtd_theme ; better_apidoc
test = pytest ; hypothesis; beautifulsoup4

[options.packages.find]
where = source

[bumpversion:file:./source/added_value/version.py]

[bumpversion:file:changelog.rst]
search = $(next-version)
replace = {new_version}

[bdist_wheel]
universal = 1
